tests/NormalTests/paczka2/big_fuzzy/35398390.err
Error in line 3: bhRzd7yb A570 89,6
Error in line 8: QZUUTEt A570 20,80
Error in line 14: A665 A570 55,3
Error in line 18: A665 S864 57,7
Error in line 23: OEp0cT5BlBF S864 20,2
Error in line 27: lXHqBzssqc A665 94,4
Error in line 31: lXHqBzssqc A159 7,9
Error in line 32: 4WXC A159 54,4
Error in line 39: QZUUTEt A570 66,9
Error in line 35: lXHqBzssqc A665 24,4
Error in line 30: bhRzd7yb A665 92,4
Error in line 40: QZUUTEt A665 3,0
Error in line 57: OEp0cT5BlBF A159 42,5
Error in line 55: A665 A570 80,9
Error in line 70: lXHqBzssqc A665 0,0
Error in line 82: lXHqBzssqc S864 6,4
Error in line 76: OEp0cT5BlBF A665 47,6
Error in line 92: OEp0cT5BlBF A570 94,0
Error in line 98: QZUUTEt A570 1,4
Error in line 104: QZUUTEt S864 68,6
Error in line 100: OEp0cT5BlBF A570 69,3
Error in line 108: OEp0cT5BlBF A665 10,2
Error in line 87: 4WXC A570 25,9
Error in line 118: bhRzd7yb A665 47,2
Error in line 122: a5w37Ri6jNR A665 60,2
Error in line 136: bhRzd7yb A665 73,1
Error in line 140: bhRzd7yb A159 47,6
Error in line 143: bhRzd7yb A665 10,1
Error in line 157: 4WXC A570 47,8
Error in line 163: OEp0cT5BlBF S864 52,7
Error in line 187: bhRzd7yb A159 -3,1
Error in line 192: lXHqBzssqc A665 92,8
Error in line 180: 4WXC A570 320,6
Error in line 199: bhRzd7yb A159 358,3
Error in line 202: A665 A570 72,4
Error in line 219: A665 A665 39,9
Error in line 243: A665 A665 40,8
Error in line 240: 4WXC A159 19,7
Error in line 245: 4WXC A665 34,7
